tests/test_exposure_to_namespace_except_specific_pod/backend_netpol.yaml
# this policy denies any egress from backend/backend-app
# however hello_world_netpol.yaml allows ingress to hello-world/workload-a from all pods in backend
# still, in the results we see that there is no connection between backend/backend-app but hello-world/workload-a
# is exposed to all pods in backend namespace, because its policy accepts that;
# and our goal is to emphasize cases where the policy better be tighten (hello_world_netpol in this case) 
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress-from-backend-app
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: backend-app
  policyTypes:
  - Egress
